examples/type_system/failing/53_strict_public_effectful_missing_with.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

public fn log(x) {
    print(to_string(x))
}

fn main() -> Unit {
}
